--- a/多线程.md
+++ b/多线程.md
@@ -44,8 +44,9 @@ private static void atomic() {
 Connected to the target VM, address: '127.0.0.1:61482', transport: 'socket'
 Thread[main,5,main] : atomic 20000
 Thread[main,5,main] : 8577
-Disconnected from the target VM, address: '127.0.0.1:61482', transport: 'socket'
+Disconnected from the target VM, address: '127.0.0.1:61482', transport: 'socke'
 
 Process finished with exit code 0
 ```
 
+![jmm](./images/jmm.png)
