add String and Feign

--- a/多线程.md
+++ b/多线程.md
@@ -50,3 +50,12 @@ Process finished with exit code 0
 ```
 
 ![jmm](./images/jmm.png)
+
+## 二、JMM
+
+```
+1、可见性  保证多个线程 在某一个线程对 主内存的数据操作 对其他线程可见 
+2、原子性  确保多个线程 在某一个有且仅有一个线程 对数据操作
+3、有序性  cpu执行的指令 是有序的
+```
+
